set(_FILES
  containers/HashTables/HashTable/HashTableCore.C
  containers/HashTables/ListHashTable/ListHashTableCore.C
  containers/Lists/SortableList/ParSortableListName.C
  containers/Lists/PackedList/PackedListCore.C
  containers/Lists/PackedList/PackedBoolList.C
  containers/Lists/ListOps/ListOps.C
  containers/LinkedLists/linkTypes/SLListBase/SLListBase.C
  containers/LinkedLists/linkTypes/DLListBase/DLListBase.C
  primitives/bools/bool/bool.C
  primitives/bools/bool/boolIO.C
  primitives/bools/Switch/Switch.C
  primitives/bools/Switch/SwitchIO.C
  primitives/bools/lists/boolList.C
  primitives/chars/char/charIO.C
  primitives/chars/wchar/wcharIO.C
  primitives/direction/directionIO.C
  primitives/ints/uint32/uint32.C
  primitives/ints/uint32/uint32IO.C
  primitives/ints/uint64/uint64.C
  primitives/ints/uint64/uint64IO.C
  primitives/ints/uint/uintIO.C
  primitives/ints/int32/int32.C
  primitives/ints/int32/int32IO.C
  primitives/ints/int64/int64.C
  primitives/ints/int64/int64IO.C
  primitives/ints/int/intIO.C
  primitives/ints/label/label.C
  primitives/ints/uLabel/uLabel.C
  primitives/ints/lists/labelIOList.C
  primitives/ints/lists/labelListIOList.C
  primitives/Scalar/longDoubleScalar/longDoubleScalar.C
  primitives/Scalar/doubleScalar/doubleScalar.C
  primitives/Scalar/floatScalar/floatScalar.C
  primitives/Scalar/scalar/scalar.C
  primitives/Scalar/scalar/incGamma.C
  primitives/Scalar/scalar/invIncGamma.C
  primitives/Scalar/lists/scalarList.C
  primitives/Scalar/lists/scalarIOList.C
  primitives/Scalar/lists/scalarListIOList.C
  primitives/DiagTensor/diagTensor/diagTensor.C
  primitives/SphericalTensor/sphericalTensor/sphericalTensor.C
  primitives/SphericalTensor/labelSphericalTensor/labelSphericalTensor.C
  primitives/SymmTensor/labelSymmTensor/labelSymmTensor.C
  primitives/SymmTensor/symmTensor/symmTensor.C
  primitives/Tensor/labelTensor/labelTensor.C
  primitives/Tensor/tensor/tensor.C
  primitives/Tensor/lists/sphericalTensorList.C
  primitives/Tensor/lists/symmTensorList.C
  primitives/Tensor/lists/tensorList.C
  primitives/Vector/complexVector/complexVector.C
  primitives/Vector/floatVector/floatVector.C
  primitives/Tensor/floatTensor/floatTensor.C
  primitives/Vector/labelVector/labelVector.C
  primitives/Vector/vector/vector.C
  primitives/Vector/lists/vectorList.C
  primitives/Vector/lists/vectorIOList.C
  primitives/Vector/lists/vectorListIOList.C
  primitives/Tensor2D/tensor2D/tensor2D.C
)
add_library(common ${_FILES})
target_compile_features(common PUBLIC cxx_std_11)
target_include_directories(common PUBLIC include PUBLIC includePrivate)
target_link_libraries(common PUBLIC OpenFOAM)
