set(_FILES
  attachDetach/attachDetach.C
  attachDetach/attachInterface.C
  attachDetach/detachInterface.C
  attachDetach/attachDetachPointMatchMap.C
  layerAdditionRemoval/layerAdditionRemoval.C
  layerAdditionRemoval/setLayerPairing.C
  layerAdditionRemoval/addCellLayer.C
  layerAdditionRemoval/removeCellLayer.C
  slidingInterface/enrichedPatch/enrichedPatch.C
  slidingInterface/enrichedPatch/enrichedPatchPointMap.C
  slidingInterface/enrichedPatch/enrichedPatchFaces.C
  slidingInterface/enrichedPatch/enrichedPatchPointPoints.C
  slidingInterface/enrichedPatch/enrichedPatchCutFaces.C
  slidingInterface/enrichedPatch/enrichedPatchMasterPoints.C
  polyTopoChange/polyMeshModifier/polyMeshModifier.C
  polyTopoChange/polyMeshModifier/polyMeshModifierNew.C
  polyTopoChange/polyTopoChange/topoAction/topoActions.C
  polyTopoChange/polyTopoChanger/polyTopoChanger.C
  polyTopoChange/polyTopoChange/polyTopoChange.C
  polyTopoChange/polyTopoChange/addPatchCellLayer.C
  polyTopoChange/polyTopoChange/pointEdgeCollapse/pointEdgeCollapse.C
  polyTopoChange/polyTopoChange/edgeCollapser.C
  polyTopoChange/polyTopoChange/faceCollapser.C
  polyTopoChange/polyTopoChange/removeCells.C
  polyTopoChange/polyTopoChange/removeFaces.C
  polyTopoChange/polyTopoChange/refinementData.C
  polyTopoChange/polyTopoChange/refinementDistanceData.C
  polyTopoChange/polyTopoChange/removePoints.C
  polyTopoChange/polyTopoChange/combineFaces.C
  polyTopoChange/polyTopoChange/duplicatePoints.C
  polyTopoChange/polyTopoChange/tetDecomposer.C
  polyTopoChange/polyTopoChange/hexRef8/hexRef8.C
  polyTopoChange/polyTopoChange/hexRef8/hexRef8Data.C
  polyTopoChange/polyTopoChange/hexRef8/refinementHistory.C
  slidingInterface/slidingInterface.C
  slidingInterface/slidingInterfaceProjectPoints.C
  slidingInterface/coupleSlidingInterface.C
  slidingInterface/slidingInterfaceAttachedAddressing.C
  slidingInterface/slidingInterfaceClearCouple.C
  slidingInterface/decoupleSlidingInterface.C
  perfectInterface/perfectInterface.C
  repatchMesh/repatchMesh.C
  repatchMesh/repatchPatch.C
  meshCut/meshModifiers/boundaryCutter/boundaryCutter.C
  meshCut/meshModifiers/meshCutter/meshCutter.C
  meshCut/meshModifiers/meshCutAndRemove/meshCutAndRemove.C
  meshCut/meshModifiers/undoableMeshCutter/undoableMeshCutter.C
  meshCut/meshModifiers/refinementIterator/refinementIterator.C
  meshCut/meshModifiers/multiDirRefinement/multiDirRefinement.C
  meshCut/cellLooper/cellLooper.C
  meshCut/cellLooper/topoCellLooper.C
  meshCut/cellLooper/geomCellLooper.C
  meshCut/cellLooper/hexCellLooper.C
  meshCut/directions/directions.C
  meshCut/directions/directionInfo/directionInfo.C
  meshCut/edgeVertex/edgeVertex.C
  meshCut/cellCuts/cellCuts.C
  meshCut/splitCell/splitCell.C
  meshCut/refineCell/refineCell.C
  meshCut/wallLayerCells/wallLayerCells.C
  meshCut/wallLayerCells/wallNormalInfo/wallNormalInfo.C
  polyTopoChange/attachPolyTopoChanger/attachPolyTopoChanger.C
  polyTopoChange/repatchPolyTopoChanger/repatchPolyTopoChanger.C
  fvMeshAdder/fvMeshAdder.C
  fvMeshDistribute/fvMeshDistribute.C
  polyMeshAdder/faceCoupleInfo.C
  polyMeshAdder/polyMeshAdder.C
  fvMeshTools/fvMeshTools.C
  fvMeshSubset/fvMeshSubset.C
  motionSmoother/motionSmoother.C
  motionSmoother/motionSmootherAlgo.C
  motionSmoother/motionSmootherAlgoCheck.C
  motionSmoother/motionSmootherData.C
  motionSmoother/dynamicMeshCheck/dynamicMeshCheck.C
  motionSmoother/badQualityToCell/badQualityToCell.C
  motionSmoother/badQualityToFace/badQualityToFace.C
  motionSolvers/motionSolver/motionSolver.C
  motionSolvers/displacement/points0/points0MotionSolver.C
  motionSolvers/displacement/displacement/displacementMotionSolver.C
  motionSolvers/displacement/layeredSolver/displacementLayeredMotionMotionSolver.C
  motionSolvers/displacement/layeredSolver/pointEdgeStructuredWalk.C
  motionSolvers/displacement/linearSolver/displacementLinearMotionMotionSolver.C
  motionSolvers/componentDisplacement/componentDisplacementMotionSolver.C
  motionSolvers/velocity/velocityMotionSolver.C
  motionSolvers/componentVelocity/componentVelocityMotionSolver.C
  motionSolvers/displacement/solidBody/solidBodyMotionSolver/solidBodyMotionSolver.C
  motionSolvers/displacement/solidBody/multiSolidBodyMotionSolver/multiSolidBodyMotionSolver.C
  motionSolvers/displacement/solidBody/interpolatingSolidBodyMotionSolver/interpolatingSolidBodyMotionSolver.C
  motionSolvers/motionSolverList/motionSolverList.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/solidBodyMotionFunction/solidBodyMotionFunction.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/solidBodyMotionFunction/solidBodyMotionFunctionNew.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/SDA/SDA.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/sixDoFMotion/sixDoFMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/linearMotion/linearMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/rotatingMotion/rotatingMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/axisRotationMotion/axisRotationMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/multiMotion/multiMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/oscillatingLinearMotion/oscillatingLinearMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/oscillatingRotatingMotion/oscillatingRotatingMotion.C
  motionSolvers/displacement/solidBody/pointPatchFields/derived/solidBodyMotionDisplacement/solidBodyMotionDisplacementPointPatchVectorField.C
  createShellMesh/createShellMesh.C
  polyMeshFilter/polyMeshFilterSettings.C
  polyMeshFilter/polyMeshFilter.C
  pointPatchDist/externalPointEdgePoint.C
  pointPatchDist/pointPatchDist.C
  pointInterpolator/dynamicMeshPointInterpolator.C
)
add_library(dynamicMesh ${_FILES})
target_compile_features(dynamicMesh PUBLIC cxx_std_11)
target_include_directories(dynamicMesh PUBLIC include PRIVATE includePrivate)
